# estante_digital

./: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yaml
estante_digital/: app.py  database.py  models.py  schemas.py  security.py  utils.py
estante_digital/routers/: auth.py  authors.py  books.py  collection.py  users.py
migrations/: env.py
migrations/versions/: 2c6d7c90ad74_create_database.py
tests/: conftest.py  factories.py  test_app.py  test_auth.py  test_authors.py  test_books.py  test_collection.py  test_security.py  test_users.py
